--- a/Rešerše/zdroje.bib
+++ b/Rešerše/zdroje.bib
@@ -72,3 +72,19 @@ Journal = {IPSJ Transactions on Computer Vision and Applications},
 year = {2017}
 }
 
+@inproceedings{Semi-Dense_VO,
+ author = {Engel, Jakob and Sturm, J\"{u}rgen and Cremers, Daniel},
+ title = {Semi-dense Visual Odometry for a Monocular Camera},
+ booktitle = {Proceedings of the 2013 IEEE International Conference on Computer Vision},
+ series = {ICCV '13},
+ year = {2013},
+ isbn = {978-1-4799-2840-8},
+ pages = {1449--1456},
+ numpages = {8},
+ url = {http://dx.doi.org/10.1109/ICCV.2013.183},
+ doi = {10.1109/ICCV.2013.183},
+ acmid = {2587057},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+ keywords = {SLAM, visual odometry, monocular, dense, stereo},
+} 
