--- a/Rešerše/zdroje.bib
+++ b/Rešerše/zdroje.bib
@@ -86,5 +86,12 @@ year = {2017}
  acmid = {2587057},
  publisher = {IEEE Computer Society},
  address = {Washington, DC, USA},
- keywords = {SLAM, visual odometry, monocular, dense, stereo},
+ keywords = {SLAM, visual odometry, monocular, dense, stereo}
 } 
+
+@inproceedings{Engel14_LSD,
+    author = {Jakob Engel and Daniel Cremers},
+    title = {LSD-SLAM: Large-scale Direct Monocular SLAM},
+    booktitle = {In ECCV},
+    year = {2014}
+}
